--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +45,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_BACKEND_URL"
+    ]
   }
 }
